--- a/Gestion_Empledos(2.0)/nbproject/private/private.properties
+++ b/Gestion_Empledos(2.0)/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
-file.reference.DateChooser.jar=C:\\Users\\Dolly\\OneDrive - SENATI\\CUARTOCICLO\\Archivos xXx\\conexiones\\mysql-connector-j-8.3.0.jar
-file.reference.jcalendar-1.1.4.jar=C:\\Users\\Dolly\\Downloads\\ProyectoGestionEmpleados\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Dolly\\Downloads\\ProyectoGestionEmpleados\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\Dolly\\OneDrive - SENATI\\CUARTOCICLO\\Archivos xXx\\conexiones\\mysql-connector-j-8.3.0.jar
-user.properties.file=C:\\Users\\Dolly\\AppData\\Roaming\\NetBeans\\22\\build.properties
+file.reference.DateChooser.jar=C:\\Users\\Alumno\\Downloads\\jdatechooser-master\\jdatechooser-master\\lib\\DateChooser.jar
+file.reference.jcalendar-1.1.4.jar=C:\\Users\\Alumno\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Alumno\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Alumno\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\Alumno\\Downloads\\Gestion_Empleados\\Gestion_Empleados\\mysql-connector-java-8.0.28.jar
+user.properties.file=C:\\Users\\Alumno\\AppData\\Roaming\\NetBeans\\22\\build.properties
