--- a/Gestion_Empledos(2.0)/nbproject/project.properties
+++ b/Gestion_Empledos(2.0)/nbproject/project.properties
@@ -85,7 +85,7 @@ main.class=gestion_empledos.ejecutable
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_21
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
